# homework12

./: .gitignore  CMakeLists.txt  README.md  file_splitter.cpp  file_splitter.h  handler.cpp  handler.h  main.cpp  mapper.cpp  mapper.h  reducer.cpp  reducer.h  test_mapreduce_gtest.cpp  thread_pool.cpp  thread_pool.h
.github/workflows/: release.yml
test/: corpus1.txt  corpus2.txt
